answer questions for homework 4

--- a/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
+++ b/04_Production_RAG/Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb
@@ -244,6 +244,21 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The following OpenAI models could be used by changing the model name in `ChatOpenAI(model=\"model_name\")`:\n",
+        "\n",
+        "1. **GPT-4o**\n",
+        "   - versatile, high-intelligence flagship model\n",
+        "\n",
+        "2. **o1 and o1-mini**\n",
+        "   - Reasoning models that excel at complex, multi-step tasks\n",
+        "\n",
+        "Choose based on your needs for speed, cost, and complexity of the task. There is a long list of models that could be included"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "9nU8SlHfH41T"
       },
@@ -826,9 +841,20 @@
         "\n",
         "Brainstorm some ideas that would split large single documents into smaller documents.\n",
         "\n",
-        "1. `YOUR IDEA HERE`\n",
-        "2. `YOUR IDEA HERE`\n",
-        "3. `YOUR IDEA HERE`"
+        "1. **Semantic Splitting**\n",
+        "   - Split based on semantic similarity or topic changes\n",
+        "   - Use embeddings to detect natural topic boundaries\n",
+        "   - Better preserves context and meaning compared to character-based splitting\n",
+        "\n",
+        "2. **Structure-Aware Splitting**\n",
+        "   - Split based on document structure (headers, sections, paragraphs)\n",
+        "   - Respect markdown/HTML tags or document formatting\n",
+        "   - Maintain hierarchical relationships between sections\n",
+        "\n",
+        "3. **Token-Aware Splitting**\n",
+        "   - Use token counting instead of characters\n",
+        "   - Consider model context window limits\n",
+        "   - Ensure splits align with token boundaries to avoid truncation\n"
       ]
     },
     {
@@ -884,7 +910,7 @@
       },
       "outputs": [],
       "source": [
-        "embedding_dim =  # YOUR ANSWER HERE"
+        "embedding_dim =  1536"
       ]
     },
     {
@@ -1114,7 +1140,26 @@
         "\n",
         "What does LCEL do that makes it more reliable at scale?\n",
         "\n",
-        "> HINT: Use your newly created `simple_rag` to help you answer this question!"
+        "1. **Async, Batch, and Streaming Support**\n",
+        "   - Automatically supports synchronous and asynchronous operations\n",
+        "   - Enables batch processing for multiple queries\n",
+        "   - Allows streaming responses for better user experience\n",
+        "   - Easy to prototype in sync mode and deploy as async\n",
+        "\n",
+        "2. **Built-in Error Handling**\n",
+        "   - Handles LLM non-determinism through fallback mechanisms\n",
+        "   - Easily attach fallbacks to any chain for graceful error recovery\n",
+        "   - Makes the system more robust in production\n",
+        "\n",
+        "3. **Automatic Parallelization**\n",
+        "   - Automatically runs parallel components simultaneously\n",
+        "   - Optimizes performance for long-running API calls\n",
+        "   - Reduces overall latency in complex chains\n",
+        "\n",
+        "4. **Observability with LangSmith**\n",
+        "   - Automatic logging of all steps\n",
+        "   - Maximal observability for complex chains\n",
+        "   - Better debugging capabilities at scale\n"
       ]
     },
     {
@@ -1605,6 +1650,17 @@
         "- What if the retriever finds no relevant context?  \n",
         "- What if the response needs fact-checking?\n",
         "Consider how you would modify the graph to handle these scenarios."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\t•\tIntroduce a “Fallback” Node: Add a conditional check or “fallback” node after the retriever step. If no relevant context is found, this node can either:\n",
+        "\t•\tTrigger an alternative action (e.g., prompt the user for more specific input).\n",
+        "\t•\tRoute to a predefined set of general context or default information (like an FAQ or basic response) that can be returned when no relevant content is found.\n",
+        "\t•\tCreate an error node or process where an alert or message is generated (e.g., “I couldn’t find any relevant information. Could you clarify your question?”). This can guide the user in providing more specific queries.\n",
+        "\t•\tAfter the retriever step, the graph could have a decision branch to check whether valid context was retrieved. If not, the process could loop back to ask the user for additional information or even suggest alternative queries."
       ]
     }
   ],
